<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_view_id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="test" />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        tools:gravity="center"
        tools:layout_editor_absoluteY="47dp">

        <RadioButton
            android:id="@+id/level_n1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/level_n1" />

        <RadioButton
            android:id="@+id/level_n2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/level_n2" />

        <RadioButton
            android:id="@+id/level_n3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/level_n3" />

        <RadioButton
            android:id="@+id/level_n4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/level_n4" />

        <RadioButton
            android:id="@+id/level_n5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/level_n5" />
    </RadioGroup>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <CheckBox android:id="@+id/checkbox_meat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="abc"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/checkbox_cheese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="def"
                android:onClick="onCheckboxClicked"/>
        </LinearLayout>
        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>